syntax = "proto3";

package ariand.v1;

import "google/protobuf/timestamp.proto";

option go_package = "ariand/gen/go/ariand/v1;ariandv1";

// User account
message User {
  string id = 1; // UUID
  string email = 2;
  optional string display_name = 3;
  google.protobuf.Timestamp created_at = 4;
  google.protobuf.Timestamp updated_at = 5;
}

// WebAuthn credential
message UserCredential {
  string id = 1; // UUID
  string user_id = 2; // UUID
  bytes credential_id = 3;
  bytes public_key = 4;
  int64 sign_count = 5;
  google.protobuf.Timestamp created_at = 6;
}